--- a/HuntNet/web/production/css/custom.css
+++ b/HuntNet/web/production/css/custom.css
@@ -1472,6 +1472,9 @@ ul.quick-list li i {
 .widget_summary .w_right span {
   font-size: 20px;
 }
+.w_10 {
+  width: 10%
+}
 .w_20 {
   width: 20%
 }
@@ -1480,6 +1483,12 @@ ul.quick-list li i {
 }
 .w_55 {
   width: 55%
+}
+.w_70 {
+  width: 70%
+}
+.w_80 {
+  width: 80%
 }
 h5.graph_title {
   text-align: left;
